Initial conceptId endpoint implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.security.oauth2.client.provider.edl.token-uri=https://urs.earthdata.nasa.
 spring.security.oauth2.client.provider.edl.user-info-uri=https://urs.earthdata.nasa.gov/api/users
 spring.security.oauth2.client.provider.edl.user-name-attribute=uid
 
-swodlr.cmr.endpoint=https://graphql.earthdata.nasa.gov/api
+swodlr.cmr-graphql-endpoint=https://graphql.earthdata.nasa.gov/api
+swodlr.raster-collection-concept-id=C2799438271-POCLOUD
 swodlr.security.sessionLength=24h
 
 #---
